<resources>
    <string name="app_name">DocumentScanner</string>
    <string name="open_camera">Open Camera</string>
    <string name="capture_image">Capture Image</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="flash">Flash</string>
    <string name="gallery">Gallery</string>
    <string name="create_document">Create Document</string>
    <string name="edit_image">Edit Image</string>
    <string name="rotate">Rotate</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="crop">Crop</string>
    <string name="re_crop">Re-crop</string>
    <string name="filter">Filter</string>
    <string name="delete">Delete</string>
    <string name="processing">Processing…</string>
    <string name="home">Home</string>
    <string name="saved_files">Saved Files</string>
    <string name="more">More</string>
    <string name="image_preview">Image Preview</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="save_as_image">Save as Image</string>
    <string name="output_file_name">File Name</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saving_as_pdf_message">Please wait while saving file as PDF. This may take a while</string>
    <string name="saving_as_pdf_title">Saving as PDF</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="image_delete_warning_msg">Are you sure to delete this image?</string>
    <string name="file_delete_warning_msg">Are you sure to delete this file?</string>
    <string name="save_done_message">"PDF is saved successfully! "</string>
    <string name="show_output">Show Output</string>
    <string name="no_thanks">No Thanks</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="open_with">Open With</string>
    <string name="deleting_file">Deleting file…</string>
    <string name="file_deleted">File is deleted!</string>
    <string name="saving">Saving…</string>
    <string name="fetching_saved_files">Fetching saved files…</string>
    <string name="no_saved_file_found">No saved file found!</string>
    <string name="paper_effect">Paper</string>
    <string name="apply_paper_effect">Apply Paper Effect</string>
    <string name="improve_text">Improve Text</string>
    <string name="improve_background">Improve Background</string>
    <string name="brightness">Brightness</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="improve_image_quality">Improve image quality</string>
    <string name="edit">Edit</string>
    <string name="document_name">Document Name</string>
    <string name="enrich">Enrich</string>
    <string name="reset">Reset</string>
</resources>