<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.imageEdit.ImageEditActivity">


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageOptionContainer"
        android:layout_margin="@dimen/dimen_8" />

    <com.google.android.material.chip.Chip
        android:id="@+id/imagePositionChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageOptionContainer"
        android:layout_margin="@dimen/dimen_32"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <Button
        android:id="@+id/reCropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:text="@string/re_crop"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/imageOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rotateButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/rotate_left_white_24"
            android:text="@string/rotate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cropButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/crop_white_24"
            android:text="@string/crop" />-->


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/filterButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/filter_white_24"
            android:text="@string/filter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/paperEffectButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/adjust_background"
            android:text="@string/paper_effect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/imageEnrichButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/adjust_background"
            android:text="@string/enrich"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/deleteButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/delete_white_24"
            android:text="@string/delete" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/filterOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageOptionContainer"
        />



</androidx.constraintlayout.widget.ConstraintLayout>