<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activityNavigator"
            type="com.stcodesapp.documentscanner.ui.helpers.ActivityNavigator" />

        <variable
            name="viewModel"
            type="com.stcodesapp.documentscanner.ui.imageEdit.ImagePreviewViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.imageEdit.ImagePreviewActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/chosenImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            imageUrl="@{viewModel.chosenImagePath}"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparentBlack"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_16"
            app:layout_constraintBottom_toBottomOf="@+id/chosenImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/rotateButton"
                style="@style/imagePreviewButtonStyle"
                android:drawableTop="@drawable/rotate_left_white_24"
                app:layout_constraintBottom_toBottomOf="@+id/chosenImageView"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/rotate"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cropButton"
                style="@style/imagePreviewButtonStyle"
                android:drawableTop="@drawable/crop_white_24"
                app:layout_constraintBottom_toBottomOf="@+id/chosenImageView"
                app:layout_constraintStart_toEndOf="@id/rotateButton"
                android:text="@string/crop"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/filterButton"
                style="@style/imagePreviewButtonStyle"
                android:drawableTop="@drawable/filter_white_24"
                app:layout_constraintBottom_toBottomOf="@+id/chosenImageView"
                app:layout_constraintStart_toEndOf="@id/cropButton"
                android:text="@string/filter"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deleteButton"
                style="@style/imagePreviewButtonStyle"
                android:drawableTop="@drawable/delete_white_24"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="@+id/chosenImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/filterButton" />


        </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>
    
    
</layout>
