<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dialog"
            type="com.stcodesapp.documentscanner.ui.dialogs.ImageToPDFNameDialog" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/dimen_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/outputNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/output_file_name"
            android:layout_marginHorizontal="@dimen/dimen_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/outputNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginVertical="@dimen/dimen_8"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_8"
            android:layout_marginTop="@dimen/dimen_8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            android:hint="@string/enter_name_here">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{() -> dialog.onSaveButtonClicked()}"
            android:layout_marginTop="@dimen/dimen_8"
            app:layout_constraintEnd_toEndOf="@+id/textField"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toBottomOf="@+id/textField" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="@{() -> dialog.onCancelButtonClicked()}"
            android:layout_marginTop="@dimen/dimen_8"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textField"
            app:layout_constraintStart_toStartOf="@+id/textField"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
