<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.imageEffect.ImageEffectFragment">

    <TextView
        android:id="@+id/headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply_paper_effect"
        android:layout_margin="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/headerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginHorizontal="@dimen/dimen_8" />

    <TextView
        android:id="@+id/brightnessText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/brightness"
        android:layout_margin="@dimen/dimen_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <SeekBar
        android:id="@+id/brightnessSeekBar"
        android:layout_width="0dp"
        android:max="100"
        android:progress="50"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:paddingStart="@dimen/dimen_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightnessText" />

    <TextView
        android:id="@+id/hueText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hue"
        android:layout_margin="@dimen/dimen_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/brightnessSeekBar" />

    <SeekBar
        android:id="@+id/hueSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:max="100"
        android:paddingStart="@dimen/dimen_8"
        android:progress="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hueText" />

    <TextView
        android:id="@+id/saturationText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/saturation"
        android:layout_margin="@dimen/dimen_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hueSeekBar" />

    <SeekBar
        android:id="@+id/saturationSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:max="100"
        android:progress="5"
        android:paddingStart="@dimen/dimen_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturationText" />

</androidx.constraintlayout.widget.ConstraintLayout>