<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.imageCrop.ImageCropActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageOptionContainer"
        android:layout_margin="@dimen/dimen_8" />


    <com.google.android.material.chip.Chip
        android:id="@+id/imagePositionChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageOptionContainer"
        android:layout_margin="@dimen/dimen_32"
        android:visibility="gone"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <LinearLayout
        android:id="@+id/imageOptionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rotateLeftButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/rotate_left_white_24"
            android:text="@string/rotate_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rotateRightButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/rotate_right_white_24"
            android:text="@string/rotate_right" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cropButton"
            style="@style/imagePreviewButtonStyle"
            android:drawableTop="@drawable/crop_white_24"
            android:text="@string/crop" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>